--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,134 +1,74 @@
-/*
-
-Each of these CSS elements is associated with an HTML Element, Class, or ID.
-Flip between this CSS file and the HTML to see how things line up.
-Experiment with deleting lines of code from the CSS to see how it affects the webpage when you refresh in the browser.
-
-*/
-
-/* body {
-  padding: 0;
-  margin: 0;
-  font-family: Georgia, "Times New Roman", Times, serif;
-  font-size: 18px;
-  line-height: 150%;
-  color: #333;
-  background: #efeee7;
-} */
-
-/* header {
-  background: #d21034;
-} */
-
- h1 {
-  position: absolute;
-  padding: 20px 0;
-  margin-top: 20px;
-  margin-left: 25%;
-  margin-bottom: 20px;
-  font-size: 28px;
-  color: #eee;
-  text-align: center;
-  background: #4aaaa5;
-  border-style: medium;
-  border-width: thin; 
-  width: 250px;
-}  
-
- /* h2 {
-  position: absolute; 
-  padding: 20px 0;
-  margin-left: 25%;
-  margin-bottom: 20px;
-  font-size: 28px;
-  color: #eee;
-  text-align: center; 
-  background: white;
-  width: 650px; 
- }  */ 
- 
-img {
-  float: left;
-  border: 20px;
-}
-
-/* .a {
-  color: #d21034;
-} */
-
-/*div.absolute {
-  position: sticky;
-  top: 80px;
-  right: 0;
-  width: 200px;
-  height: 100px;
-  border: 3px solid #73AD21;
-} */
-
-/*.box-white {
-  position: absolute;
-  background: white;
-  width: 800px;
-  height: 800px;
-  background-color: white; 
-} */
-.container {
-  width: 940px;
-  height: 800px;
-  background-color: rgb(247, 240, 240); 
-} 
- 
-#main-bio,
-#contact-info,
-#bio-image {
-  float: left;
-}
-
-#main-bio {
-  height: 300px;
-  width: 300px;;
-}
-
-#contact-info {
-  width: 30%;
-}
-
-#bio-image {
-  width: 200px;
-  height: 200px;
-  margin-right: 20px;
-}
 
 
-.p1{
-  width: 940px; 
-  font: size 8px;
-  font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
-  color: rgb(19, 18, 18);
-}
-h2{
-  width: 960px;
-  margin: 0 auto 6em auto;
-  background-color: rgb(221, 212, 212);
+    html, body{
+        margin:0;
+        padding: 0;
+    }    
 
-} 
-.container1{
-  background-color:rgb(250, 248, 248); 
-}
-.container2{
-  background-color:rgb(250, 248, 248); 
-  margin-right: 20px;
-}
-.about_me{
-  margin: 20px;
-  padding-top:20px; 
-  background-color: rgb(212, 208, 208) 
-}
-.about_me1{
-  margin: 20px;
-  padding-top:5px;
-  border-style: medium;
-  border-width: thin;
+    body{
+        background: rgb(227, 230, 231);
+        margin: 0;
+    }
 
-   
-}
+    nav {
+        float: right;
+      
+    }    
+
+    #content{
+        border-style:none;/* 1px solid black; */
+        width: 960px;
+        height: 400px;
+        margin: 20px auto;
+        clear: both;
+        background: #ffffff;
+    }
+    
+    li{
+        display: inline-block
+    }
+    p{
+     color:gray
+    }
+
+    .about_me1{
+        float: left;
+        width:300px;
+        color: white;
+        background: #4aaaa5;
+        height: 79px;
+        margin:0;
+    }
+    .about_me2{
+        /* float: left;
+        width:300px; */
+        color: #4aaaa5;
+        background: white;
+        /* height: 79px;
+        margin:0; */
+
+    }
+
+    header{
+        border-bottom: 1px solid ;
+        overflow: auto;
+        background: #ffffff;
+    }
+
+    #header-container{
+        width: 960px;
+        margin: 0 auto;
+        /* border: 1px solid blue; */
+        overflow:auto;
+
+    }
+
+    footer{
+        height: 50px;
+        background: #4f5c5b;
+        border-top: 10px solid #4aaaa5;
+    }
+
+
+
+    
