--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -70,3 +70,23 @@
         background: gray;
         border-top: 5px solid #4aaaa5;
     }
+
+    input[type=text] {
+        width: 100%;
+        padding: 5px 20px 10px;
+        margin: 8px 0;
+        box-sizing: border-box;
+      }
+
+      .button {
+        background-color: #4aaaa5;
+        border: none;
+        color: white;
+        padding: 7px 16px;
+        text-align: center;
+        text-decoration: none;
+        display: inline-block;
+        font-size: 16px;
+        margin: 4px 2px;
+        cursor: pointer;
+      }
